<resources>
    <string name="app_name">Elon</string>
    <string name="welcome">Добро Пожаловать</string>
    <string name="welcome_description">Создайте аккаунт, чтобы продолжить!</string>
    <string name="number_phone">Номер телефона</string>
    <string name="flag_image">flag_image</string>
    <string name="more_icon">more_icon</string>
    <string name="tajikistan_phone_code">+992</string>
    <string name="accept_number">подтвердить номер</string>
    <string name="rule_text">Я согласен(на) с Условиями соглашения и подтверждаю, что мне есть 18 лет.</string>
    <string name="authentication">Аутентификация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Электроная почта</string>
    <string name="history_title">История заказа</string>
    <string name="search">      Поиск</string>
    <string name="order_details_title">Детали заказа</string>
    <string name="ads_title">Текст Объявление</string>
    <string name="phone">Телефон</string>
    <string name="profile">Профиль</string>
    <string name="history">история</string>
    <string name="wallet">Кошелёк</string>
    <string name="history_payments">История платежей</string>
    <string name="canceled_orders">Отмененные заказы</string>
    <string name="history_orders">История заказа</string>
    <string name="home">Главная</string>
    <string name="exit">Выход</string>
    <string name="save">Сохранить</string>
    <string name="change_profile">Изменить</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="loading">"Подождите "</string>
    <string name="done">Готово</string>
    <string name="canceled_title">Отмененные заказы</string>
    <string name="category">Категория</string>
    <string name="capture_title">Сделать фото</string>
    <string name="bonus">Бонус</string>
    <string name="price">Цена</string>
    <string name="tv">Телевидение</string>
    <string name="count">Количечство слов</string>
    <string name="unhandlingError">Неизвестная ошибка</string>
    <string name="adss_title">Добавить новый объявление</string>
    <string name="error">Неизвестная ошибка</string>
    <string name="_ok">Ok</string>
    <string name="description">попробуйте позже</string>
    <string name="confirm">Confirm</string>
    <string name="price_for_word">Цена за слово</string>
    <string name="time">Cрок</string>
    <string name="take_picture">Сделать фото</string>
    <string name="select_from_gallery">Выбрать фото из галереи</string>

</resources>