<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/registrationFragment">

    <fragment
        android:id="@+id/registrationFragment"
        android:name="tj.behruz.elon.ui.registration.RegistrationFragment"
        android:label="RegistrationFragment">
        <action
            android:id="@+id/action_registrationFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
        <action
            android:id="@+id/action_registrationFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_registrationFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="tj.behruz.elon.ui.home.HomeFragment"
        android:label="">
        <action
            android:id="@+id/action_homeFragment_self"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right" />
        <action
            android:id="@+id/action_homeFragment_to_newAdsFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:destination="@id/newAdsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_historyFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_homeFragment_to_historyOrdersCanceledFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:destination="@id/historyOrdersCanceledFragment" />
        <action
            android:id="@+id/action_homeFragment_to_historyOrdersFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:destination="@id/historyOrdersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_registrationFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:destination="@id/registrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/authenticationFragment"
        android:name="tj.behruz.elon.ui.authentification.AuthenticationFragment"
        android:label="AuthenticationFragment">
        <action
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            android:id="@+id/action_authenticationFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <action
        app:enterAnim="@anim/slide_in_from_right"
        app:exitAnim="@anim/slide_out_to_left"
        app:popEnterAnim="@anim/slide_in_from_left"
        app:popExitAnim="@anim/slide_out_to_right"
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="tj.behruz.elon.ui.profile.ProfileFragment"
        android:label="Профиль" />
    <fragment
        android:id="@+id/newAdsFragment"
        android:name="tj.behruz.elon.ui.ads.NewAdsFragment"
        android:label="@string/adss_title" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="tj.behruz.elon.ui.history.HistoryFragment"
        android:label="@string/history_title" />
    <fragment
        android:id="@+id/historyOrdersCanceledFragment"
        android:name="tj.behruz.elon.ui.history_orders_canceled.HistoryOrdersCanceledFragment"
        android:label="@string/canceled_title" />
    <fragment
        android:id="@+id/historyOrdersFragment"
        android:name="tj.behruz.elon.ui.history_orders.HistoryOrdersFragment"
        android:label="HistoryOrdersFragment" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="tj.behruz.elon.ui.signin.SignInFragment"
        android:label="SignInFragment" >
        <action
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_signInFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
    </fragment>
</navigation>